tests/ui/feature-gates/feature-gate-intrinsics.stderr
error[E0658]: the `#[rustc_intrinsic]` attribute is used to declare intrinsics as function items
  --> $DIR/feature-gate-intrinsics.rs:1:1
   |
LL | #[rustc_intrinsic]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
