tests/ui/feature-gates/feature-gate-intrinsics.rs
#[rustc_intrinsic]
//~^ ERROR the `#[rustc_intrinsic]` attribute is used to declare intrinsics as function items
fn bar();

fn main() {}
